# sandcastles

./: .gitignore  LICENSE  README.md  pyproject.toml  w2s.py
examples/: mnist_cnn_demo.py  real_model_demo.py  sequential_demo.py  xor_demo.py  xor_graph_demo.py
tests/: conftest.py  test_cli.py  test_compile.py  test_core.py  test_emit.py  test_estimate.py  test_forward.py  test_fpga.py  test_mixed_precision.py  test_quantize.py  test_sparsity.py  test_testbench.py
w2s/: __init__.py  __main__.py  core.py  emit.py  estimate.py  fpga.py  graph.py  quantize.py  sparsity.py  wrapper.py
w2s/generators/: __init__.py  activation.py  attention.py  conv.py  dense.py  embedding.py  norm.py  pooling.py  structural.py  transformer.py
w2s/importers/: __init__.py  builder.py  onnx_import.py
w2s/sequential/: __init__.py  compile.py
